# santagger

./: .gitattributes  .gitignore  CMakeLists.txt  ChangeLog.md  README-build.md  README-usermanual.md  README.md  libsantagger.pc.in  santagger.pc.in  za-cmake.sh  zb-build-all.cmd  zb-build.sh  zc-run-app.sh  zc-run-cur.sh  zc-run-test-all.cmd  zc-run-test-all.sh  zc-run-test.sh  zd-install.sh  ze-run-inst.sh  zz-include.sh
cmake-mods/: TsUtils.cmake
scripts/: build_cross.sh  change_header_comments.sh  change_lib_includes.sh  generate_CMakeLists-all.sh  generate_CMakeLists-s-includes.sh  generate_CMakeLists-s-lib.sh  generate_CMakeLists-s-tests.sh  make_usermanual.sh
scripts/docker-cross/: .gitignore  README.md  build_images.sh
scripts/docker-cross/build-ctx/: Dockerfile
src/: change_header_comments.sh  change_lib_includes.sh  generate_CMakeLists_all.sh
src/app/: CMakeLists.txt  app_defs.h  app_version.h  app_version.h.in  change_lib_includes.sh  generate_CMakeLists_app.sh  main.c
src/app/cln/: CMakeLists.txt  cln-prot.h  cln_af-prot.h  (+17 more)
src/includes/: CMakeLists.txt  generate_CMakeLists_includes.sh  lib_compdefs.h.in  lib_defs.h  lib_version.h  lib_version.h.in  make_CMakeLists_includes.sh
src/includes/audvid/: CMakeLists.txt  aud_flac-defs.h  aud_mpeg1-defs.h  aud_mpeg1.h  audvid-defs.h  audvid.h  cont_ogg-defs.h  cont_ogg.h  cont_ogg_vorbcomm.h  cont_wav-defs.h  cont_wav.h
src/includes/audvid/ogg_sub/: CMakeLists.txt  ac_flac-defs.h  ac_spx_clt-defs.h  ac_vorb-defs.h  mc_vorbcomm-defs.h  vc_drc_theo-defs.h
src/lib/: CMakeLists.txt  generate_CMakeLists_lib.sh
src/lib/audvid/: CMakeLists.txt  av_zfdeb-prot.h  av_zfdeb.c
src/lib/audvid/aud_mpeg1/: CMakeLists.txt  aud_mpeg1-prot.h  aud_mpeg1.c  aud_mpeg1_gs.c  aud_mpeg1_opts.c  aud_mpeg1_stcs-prot.h  aud_mpeg1_stcs.c  aud_mpeg1_zfdeb-prot.h  aud_mpeg1_zfdeb.c  aud_mpeg1_zrd-prot.h  aud_mpeg1_zrd.c  aud_mpeg1_zrd2-pp.h  aud_mpeg1_zrd2.c
src/lib/audvid/cont_ogg/: CMakeLists.txt  cont_ogg-common-prot.h  cont_ogg-prot.h  cont_ogg.c  cont_ogg_gs.c  cont_ogg_opts.c  cont_ogg_stcs-prot.h  cont_ogg_stcs.c  cont_ogg_zfdeb-prot.h  cont_ogg_zfdeb.c  cont_ogg_zrd-pp.h  cont_ogg_zrd.c  cont_ogg_zrd_cod-pp.h  cont_ogg_zrd_cod.c  cont_ogg_zwr-pp.h  cont_ogg_zwr.c  cont_ogg_zwr_cod-pp.h  cont_ogg_zwr_cod.c
src/lib/audvid/cont_ogg_aud_flac/: CMakeLists.txt  ac_flac-prot.h  ac_flac_stcs-prot.h  ac_flac_stcs.c  ac_flac_zrd-prot.h  ac_flac_zrd.c  ac_flac_zrda-pp.h  ac_flac_zrda.c  ac_flac_zrdh-pp.h  ac_flac_zrdh.c
src/lib/audvid/cont_ogg_aud_spx_clt/: CMakeLists.txt  ac_spx_clt-prot.h  ac_spx_clt_stcs-prot.h  ac_spx_clt_stcs.c  ac_spx_clt_zrd-prot.h  ac_spx_clt_zrd.c
src/lib/audvid/cont_ogg_aud_vorb/: CMakeLists.txt  ac_vorb-prot.h  ac_vorb_stcs-prot.h  ac_vorb_stcs.c  ac_vorb_zrd-prot.h  ac_vorb_zrd.c
src/lib/audvid/cont_ogg_met_skel/: CMakeLists.txt  mc_skel-prot.h  mc_skel_zrd-prot.h  mc_skel_zrd.c  mc_skel_zstcs-prot.h  mc_skel_zstcs.c
src/lib/audvid/cont_ogg_met_vorbcomm/: CMakeLists.txt  mc_vorbcomm-prot.h  mc_vorbcomm_gs-prot.h  mc_vorbcomm_gs.c  mc_vorbcomm_stcs.c  mc_vorbcomm_zrd-prot.h  mc_vorbcomm_zrd.c
src/lib/audvid/cont_ogg_vid_drc_theo/: CMakeLists.txt  vc_drc_theo-prot.h  vc_drc_theo_stcs-prot.h  vc_drc_theo_stcs.c  vc_drc_theo_zrd-prot.h  vc_drc_theo_zrd.c
src/lib/audvid/cont_wav/: CMakeLists.txt  cont_wav-prot.h  cont_wav_gs.c  cont_wav_opts.c  cont_wav_stcs-prot.h  cont_wav_stcs.c  cont_wav_wr.c  cont_wav_zfdeb-prot.h  cont_wav_zfdeb.c  cont_wav_zfnc-prot.h  cont_wav_zfnc.c
src/lib/tag/: CMakeLists.txt  tag_basics-prot.h  tag_basics.c  tag_comfnc-prot.h  tag_comfnc.c  tag_comfnc_chk-pp.h  tag_comfnc_chk.c  tag_conv-priv.h  tag_conv.c  tag_fldmap-prot.h  tag_fldmap.c  tag_fldmap_gs.c  tag_fldmap_stcs.c  tag_fldmap_zid-priv.h  tag_fldmap_zid-prot.h  tag_fldmap_zid.c  tag_id3_helper-prot.h  tag_id3_helper.c  tag_zfdeb-prot.h  tag_zfdeb.c
src/lib/tag/apev2/: CMakeLists.txt  tag_apev2-priv_flds.h  tag_apev2-prot.h  tag_apev2.c  tag_apev2_fldadd.c  tag_apev2_fldget.c  tag_apev2_fnc-prot.h  tag_apev2_fnc.c  tag_apev2_gs-prot.h  tag_apev2_gs.c  tag_apev2_opts.c  tag_apev2_stcs-prot.h  tag_apev2_stcs.c  tag_apev2_zfdeb-prot.h  tag_apev2_zfdeb.c  tag_apev2_zrd-pp.h  tag_apev2_zrd.c  tag_apev2_ztidy-prot.h  tag_apev2_ztidy.c  tag_apev2_zwr-pp.h  tag_apev2_zwr.c
src/lib/tag/id3v1/: CMakeLists.txt  tag_id3v1-pp_flds.h  tag_id3v1-prot.h  tag_id3v1.c  tag_id3v1_fldadd.c  tag_id3v1_fnc-prot.h  tag_id3v1_fnc.c  tag_id3v1_gs-prot.h  tag_id3v1_gs.c  tag_id3v1_opts.c  tag_id3v1_stcs-prot.h  tag_id3v1_stcs.c  tag_id3v1_zfdeb-prot.h  tag_id3v1_zfdeb.c  tag_id3v1_zrd-prot.h  tag_id3v1_zrd.c  tag_id3v1_zwr-prot.h  tag_id3v1_zwr.c
src/lib/tag/id3v2/: CMakeLists.txt  tag_id3v2-priv_flds.h  tag_id3v2-prot.h  tag_id3v2.c  tag_id3v2_fldadd.c  tag_id3v2_fldget.c  tag_id3v2_fnc-priv.h  tag_id3v2_fnc-prot.h  tag_id3v2_fnc.c  tag_id3v2_gs-prot.h  tag_id3v2_gs.c  tag_id3v2_opts.c  tag_id3v2_stcs-prot.h  tag_id3v2_stcs.c  tag_id3v2_zchk-pp.h  tag_id3v2_zchk.c  tag_id3v2_zfdeb-prot.h  tag_id3v2_zfdeb.c  tag_id3v2_zrd-pp.h  tag_id3v2_zrd.c  tag_id3v2_zrd2-pp.h  tag_id3v2_zrd2.c  tag_id3v2_zsync-prot.h  tag_id3v2_zsync.c  tag_id3v2_ztidy-prot.h  tag_id3v2_ztidy.c  tag_id3v2_zwr-pp.h  tag_id3v2_zwr.c
src/lib/tag/meta/: CMakeLists.txt  tag_meta-prot.h  tag_meta.c  tag_meta_fnc-prot.h  tag_meta_fnc.c  tag_meta_gs.c  tag_meta_stcs-prot.h  tag_meta_stcs.c
src/lib/tag/vorbc/: CMakeLists.txt  tag_vorbc-priv_flds.h  tag_vorbc-prot.h  tag_vorbc.c  tag_vorbc_fldadd.c  tag_vorbc_fldget.c  tag_vorbc_fnc-prot.h  tag_vorbc_fnc.c  tag_vorbc_gs-prot.h  tag_vorbc_gs.c  tag_vorbc_opts.c  tag_vorbc_stcs-prot.h  tag_vorbc_stcs.c  tag_vorbc_zfdeb-prot.h  tag_vorbc_zfdeb.c  tag_vorbc_zrd-pp.h  tag_vorbc_zrd.c  tag_vorbc_ztidy-prot.h  tag_vorbc_ztidy.c  tag_vorbc_zwr-pp.h  tag_vorbc_zwr.c
src/tests/: CMakeLists.txt  fncs_test_common.c  fncs_test_common.h  test_binobj.c  test_dl.c  test_m64.c  test_mtes.c  test_rnd.c  test_stream.c  test_strrd.c  test_strwr.c  test_sysfile.c  test_sysfnc.c  test_tfldmap.c
src/tests/data/: data.rnd  data.txt
(+115 files in other folders)
